Iterated over array of data passed in view for testing

--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -1,1 +1,10 @@
 <h1>Homepage</h1>
+
+<div>
+
+  <% data.forEach(item => { %>
+    <p><%- item.title %></p>
+    <p><%- item.description %></p>
+  <% }) %>
+
+</div>
