--- a/src/views/public/layout.ejs
+++ b/src/views/public/layout.ejs
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%- title %></title>
+  <link rel="stylesheet" type="text/css" href="/styles/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="/styles/css/test.css">
 </head>
 
 <body>
