Included scripts in main HTML layout

--- a/src/views/public/layout.ejs
+++ b/src/views/public/layout.ejs
@@ -11,6 +11,9 @@
 
 <body>
   <%- body %>
+  <script type="text/javascript" src="/js/jquery.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.js"></script>
+  <script type="text/javascript" src="/js/test.js"></script>
 </body>
 
 </html>
