--- a/src/views/public/layout.ejs
+++ b/src/views/public/layout.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%- title %></title>
   <link rel="stylesheet" type="text/css" href="/styles/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/styles/css/test.css">
+  <link rel="stylesheet" type="text/css" href="/styles/css/styles.css">
 </head>
 
 <body>
