--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -1,1 +1,25 @@
-<h1>Login page</h1>
+<div class="container d-flex justify-content-center align-items-center cont-login">
+  <div class="text-center w-100">
+    <form class="form-signin">
+      <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">
+        Please sign in
+      </h1>
+      <label for="inputEmail" class="sr-only">
+        Email address
+      </label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="inputPassword" class="sr-only">
+        Password
+      </label>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <!-- <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div> -->
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">&copy; Jewelz 2020</p>
+    </form>
+  </div>
+</div>
