--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -1,9 +1,12 @@
+/* GENERAL STYLES */
+
 html,
 body {
   height: 100%;
-  /* background-color: #f5f5f5; */
-  background-color: #eee;
+  background-color: #f5f5f5;
 }
+
+/* LOGIN PAGE */
 
 .cont-login {
   height: 100%;
@@ -21,9 +24,7 @@ body {
   padding: 15px;
   margin: auto;
 }
-.form-signin .checkbox {
-  font-weight: 400;
-}
+
 .form-signin .form-control {
   position: relative;
   box-sizing: border-box;
@@ -31,14 +32,17 @@ body {
   padding: 10px;
   font-size: 16px;
 }
+
 .form-signin .form-control:focus {
   z-index: 2;
 }
+
 .form-signin input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
+
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
