Completed login page design

--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center cont-login">
   <div class="text-center w-100">
-    <form class="form-signin">
+    <form class="form-signin" autocomplete="off">
       <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">
         Please sign in
@@ -13,12 +13,15 @@
         Password
       </label>
       <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <!-- <div class="checkbox mb-3">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
-      </div> -->
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="my-1">
+        Forgot your password?
+        <a href="" class="text-decoration-none text-body"><b>Reset here</b></a>.
+      </p>
+      <p class="my-1">
+        Don't have an account?
+        <a href="" class="text-decoration-none text-body"><b>Register here</b></a>.
+      </p>
       <p class="mt-5 mb-3 text-muted">&copy; Jewelz 2020</p>
     </form>
   </div>
