Added link to homepage

--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -1,7 +1,9 @@
 <div class="container d-flex justify-content-center align-items-center cont-login">
   <div class="text-center w-100">
     <form class="form-signin" autocomplete="off">
-      <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
+      <a href="/">
+        <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
+      </a>
       <h1 class="h3 mb-3 font-weight-normal">
         Please sign in
       </h1>
