--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -48,3 +48,38 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+/* RESET PAGE */
+
+.cont-reset {
+  height: 100%;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+  align-items: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+
+.form-reset {
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+
+.form-reset .form-control {
+  position: relative;
+  box-sizing: border-box;
+  height: auto;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.form-reset .form-control:focus {
+  z-index: 2;
+}
+
+.form-reset input[type="email"] {
+  margin-bottom: 10px;
+}
