Re-worked 'login.ejs' design

--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -7,18 +7,20 @@
       <h1 class="h3 mb-3 font-weight-normal">
         Please sign in
       </h1>
-      <label for="inputEmail" class="sr-only">
+      <label for="loginEmail" class="sr-only">
         Email address
       </label>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-      <label for="inputPassword" class="sr-only">
+      <input type="email" id="loginEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="loginPassword" class="sr-only">
         Password
       </label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <input type="password" id="loginPassword" class="form-control" placeholder="Password" required>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">
+        Sign in
+      </button>
       <p class="my-1">
         Forgot your password?
-        <a href="" class="text-decoration-none text-body"><b>Reset here</b></a>.
+        <a href="/user/reset" class="text-decoration-none text-body"><b>Reset here</b></a>.
       </p>
       <p class="my-1">
         Don't have an account?
