--- a/src/views/public/layout.ejs
+++ b/src/views/public/layout.ejs
@@ -7,6 +7,7 @@
   <title><%- title %></title>
   <link rel="stylesheet" type="text/css" href="/styles/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="/styles/css/styles.css">
+  <link rel="icon" type="image/png" href="/img/logo.png"/>
 </head>
 
 <body>
