--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -18,14 +18,14 @@ body {
   padding-bottom: 40px;
 }
 
-.form-signin {
+.form-login {
   width: 100%;
   max-width: 330px;
   padding: 15px;
   margin: auto;
 }
 
-.form-signin .form-control {
+.form-login .form-control {
   position: relative;
   box-sizing: border-box;
   height: auto;
@@ -33,17 +33,17 @@ body {
   font-size: 16px;
 }
 
-.form-signin .form-control:focus {
+.form-login .form-control:focus {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
+.form-login input[type="email"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
 
-.form-signin input[type="password"] {
+.form-login input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
