--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -1,6 +1,6 @@
 <div class="container d-flex justify-content-center align-items-center cont-login">
   <div class="text-center w-100">
-    <form class="form-signin" autocomplete="off">
+    <form class="form-login" autocomplete="off">
       <a href="/">
         <img class="mb-4" src="/img/logo.png" alt="" width="72" height="72">
       </a>
