Added link to login page in 'reset.ejs'

--- a/src/views/public/reset.ejs
+++ b/src/views/public/reset.ejs
@@ -17,6 +17,10 @@
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Reset password
       </button>
+      <p class="my-1">
+        Back to
+        <a href="/user/login" class="text-decoration-none text-body"><b>login</b></a>.
+      </p>
       <p class="mt-5 mb-3 text-muted">&copy; Jewelz 2020</p>
     </form>
   </div>
