Added link to registration in 'login.ejs'

--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -24,7 +24,7 @@
       </p>
       <p class="my-1">
         Don't have an account?
-        <a href="" class="text-decoration-none text-body"><b>Register here</b></a>.
+        <a href="/user/register" class="text-decoration-none text-body"><b>Register here</b></a>.
       </p>
       <p class="mt-5 mb-3 text-muted">&copy; Jewelz 2020</p>
     </form>
