Included partial 'errors.ejs'

--- a/src/views/public/login.ejs
+++ b/src/views/public/login.ejs
@@ -15,6 +15,9 @@
         Password
       </label>
       <input type="password" id="loginPassword" class="form-control" placeholder="Password" required>
+
+      <%- include ('partials/errors.ejs') %>
+
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Sign in
       </button>
