--- a/src/views/public/reset.ejs
+++ b/src/views/public/reset.ejs
@@ -14,6 +14,9 @@
         Email address
       </label>
       <input type="email" id="resetEmail" class="form-control" placeholder="Email address" required autofocus>
+
+      <%- include ('partials/errors.ejs') %>
+
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Reset password
       </button>
