--- a/src/views/public/register.ejs
+++ b/src/views/public/register.ejs
@@ -19,6 +19,9 @@
         Password
       </label>
       <input type="password" id="registerPassword" class="form-control" placeholder="Password" required>
+
+      <%- include ('partials/errors.ejs') %>
+
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Create account
       </button>
