Added class 'd-none' to keep alert hidden

--- a/src/views/public/partials/errors.ejs
+++ b/src/views/public/partials/errors.ejs
@@ -1,5 +1,5 @@
 <div class="cont-error">
-  <div class="alert alert-danger alert-dismissible fade show">
+  <div class="alert alert-danger alert-dismissible fade show d-none">
     <strong>Error!</strong> Invalid credentials.
     <button type="button" class="close" data-dismiss="alert">&times;</button>
   </div>
