--- a/public/styles/css/styles.css
+++ b/public/styles/css/styles.css
@@ -1,3 +1,7 @@
+/* IMPORTS */
+
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 /* GENERAL STYLES */
 
 html,
@@ -143,4 +147,11 @@ body {
 
 .cont-error .alert {
   margin-bottom: 0 !important;
+}
+
+/* NAVBAR */
+
+nav a div {
+  font-family: 'Lobster', cursive;
+  padding-bottom: 2px;
 }
