--- a/src/views/public/layout.ejs
+++ b/src/views/public/layout.ejs
@@ -14,7 +14,7 @@
   <%- body %>
   <script type="text/javascript" src="/js/jquery.js"></script>
   <script type="text/javascript" src="/js/bootstrap.js"></script>
-  <script type="text/javascript" src="/js/test.js"></script>
+  <script type="text/javascript" src="/js/navbar-items.js"></script>
 </body>
 
 </html>
