--- a/src/views/public/layouts/layout-main.ejs
+++ b/src/views/public/layouts/layout-main.ejs
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%- title %></title>
   <link rel="stylesheet" type="text/css" href="/styles/css/bootstrap.css">
-  <link rel="stylesheet" type="text/css" href="/styles/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles/css/main.css">
   <link rel="icon" type="image/png" href="/img/logo.png"/>
 </head>
 
