--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -2,6 +2,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
+/* GENERAL STYLES */
+
+html,
+body {
+  background-color: #f5f5f5;
+}
+
 /* FORM ERROR MESSAGE */
 
 .cont-error {
@@ -21,17 +28,14 @@ nav a div {
 
 /* HOMEPAGE CARDS */
 
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.album .card img {
+  border-radius: 0.25rem;
 }
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
+.album .card-body {
+  border-top: solid 1px rgba(0, 0, 0, 0.125) !important;
+}
+
+.album .card-body p {
+  height: 20vh;
 }
