Moved card template design to test file

--- a/src/views/public/test.ejs
+++ b/src/views/public/test.ejs
@@ -13,3 +13,22 @@
   <% }) %>
 
 </div>
+
+
+<div class="col-md-4">
+  <div class="card mb-4 shadow-sm">
+    <img src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="" width="100%">
+    <div class="card-body border-top">
+      <b class="card-text">Earring</b>
+      <p class="card-text mt-2">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+      <div class="d-flex justify-content-between align-items-center">
+        <button type="button" class="btn btn-sm btn-outline-secondary">
+          Add to cart
+        </button>
+        <small class="text-body">
+          29.95 €
+        </small>
+      </div>
+    </div>
+  </div>
+</div>
