--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -26,6 +26,10 @@ nav a div {
   padding-bottom: 2px;
 }
 
+.hoverable:hover {
+  color: rgba(0, 0, 0, 0.7) !important;
+}
+
 /* HOMEPAGE CARDS */
 
 .album .card img {
