--- a/src/views/public/product-details.ejs
+++ b/src/views/public/product-details.ejs
@@ -1,2 +1,42 @@
-<h1>Product details</h1>
-<p><%- product[0].title %></p>
+<%- include ('partials/navbar.ejs') %>
+
+<div class="details p-5">
+  <div class="container-fluid">
+    <div class="row p-0">
+      <div class="col-1"></div>
+      
+      <div class="col-5">
+        <div id="carousel" class="carousel slide border" data-ride="carousel">
+          <div class="carousel-inner">
+
+            <% images.forEach(image => { %>
+              <% if(image == images[0]) { %>
+                <div class="carousel-item active">
+              <% } else { %>
+                <div class="carousel-item">
+              <% } %>
+                <img class="d-block w-100" src="<%- image.path %>" alt="Product image">
+              </div>
+            <% }) %>
+
+          </div>
+          <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+
+      <div class="col-5 border">
+        <h1>Product details</h1>
+        <p><%- product[0].title %></p>
+      </div>
+
+      <div class="col-1"></div>
+    </div>
+  </div>
+</div>
