--- a/src/views/public/product-details.ejs
+++ b/src/views/public/product-details.ejs
@@ -2,38 +2,62 @@
 
 <div class="details p-5">
   <div class="container-fluid">
+
     <div class="row p-0">
       <div class="col-1"></div>
-      
-      <div class="col-5">
-        <div id="carousel" class="carousel slide border" data-ride="carousel">
-          <div class="carousel-inner">
 
-            <% images.forEach(image => { %>
-              <% if(image == images[0]) { %>
-                <div class="carousel-item active">
-              <% } else { %>
-                <div class="carousel-item">
-              <% } %>
-                <img class="d-block w-100" src="<%- image.path %>" alt="Product image">
-              </div>
-            <% }) %>
-
-          </div>
-          <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
+      <div class="col-10">
+        <div class="row border-bottom mb-3">
+          <h2 class="h2">Product details</h2>
         </div>
-      </div>
 
-      <div class="col-5 border">
-        <h1>Product details</h1>
-        <p><%- product[0].title %></p>
+        <div class="row justify-content-center">
+          <div class="col-5">
+            <div id="carousel" class="carousel slide border" data-ride="carousel">
+              <div class="carousel-inner">
+
+                <% images.forEach(image => { %>
+                  <% if(image == images[0]) { %>
+                    <div class="carousel-item active">
+                  <% } else { %>
+                    <div class="carousel-item">
+                  <% } %>
+                    <img class="d-block w-100" src="<%- image.path %>" alt="Product image">
+                  </div>
+                <% }) %>
+
+              </div>
+              <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+          </div>
+
+          <div class="col-5">
+            <h3 class="h3 mb-3"><%- product[0].title %></h3>
+            <p class="my-2"><%- product[0].description %></p>
+            <p class="my-2"><b>Stock:</b> <%- product[0].stock %> units</p>
+            <p class="my-2"><b>Price:</b> <%- product[0].price %> €</p>
+          </div>
+        </div>
+
+        <div class="row border-top mt-3 justify-content-center">
+          <button 
+            type="button" 
+            class="btn btn-outline-secondary mt-3" 
+            data-product_id="<%- product[0].id %>"
+            <% if(product[0].stock == 0) { %>
+              disabled
+            <% } %>
+          >
+            Add to cart
+          </button>
+        </div>
       </div>
 
       <div class="col-1"></div>
