--- a/src/views/public/product-details.ejs
+++ b/src/views/public/product-details.ejs
@@ -8,11 +8,11 @@
 
       <div class="col-10">
         <div class="row border-bottom mb-3">
-          <h2 class="h2">Product details</h2>
+          <h2 class="h3">Product details</h2>
         </div>
 
         <div class="row justify-content-center">
-          <div class="col-5">
+          <div class="col-md-5">
             <div id="carousel" class="carousel slide border" data-ride="carousel">
               <div class="carousel-inner">
 
@@ -38,8 +38,8 @@
             </div>
           </div>
 
-          <div class="col-5">
-            <h3 class="h3 mb-3"><%- product[0].title %></h3>
+          <div class="col-md-5">
+            <h3 class="h4 my-3"><%- product[0].title %></h3>
             <p class="my-2"><%- product[0].description %></p>
             <p class="my-2"><b>Stock:</b> <%- product[0].stock %> units</p>
             <p class="my-2"><b>Price:</b> <%- product[0].price %> €</p>
