Re-worked styles for shopping cart image and input

--- a/public/styles/css/main.css
+++ b/public/styles/css/main.css
@@ -48,3 +48,9 @@ nav a div {
 .album .card-body p {
   height: 20vh;
 }
+
+/* SHOPPING CART */
+
+.cart input[type="number"] {
+  width: 65px !important;
+}
