--- a/src/views/public/cart.ejs
+++ b/src/views/public/cart.ejs
@@ -12,11 +12,11 @@
         </div>
 
         <div class="row justify-content-center product border-bottom py-3">
-          <div class="col-md-5">
+          <div class="col-md-4">
             <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
           </div>
 
-          <div class="col-md-5">
+          <div class="col-md-6">
             <h3 class="h4 my-3">4ever Gold</h3>
             <p class="my-2">A ring which is actually 4!</p>
             <p class="my-2"><b>Stock:</b> 100 units</p>
@@ -27,17 +27,17 @@
         </div>
 
         <div class="row justify-content-center product border-bottom py-3">
-          <div class="col-md-5">
+          <div class="col-md-4">
             <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
           </div>
 
-          <div class="col-md-5">
+          <div class="col-md-6">
             <h3 class="h4 my-3">4ever Gold</h3>
             <p class="my-2">A ring which is actually 4!</p>
             <p class="my-2"><b>Stock:</b> 100 units</p>
             <p class="my-2"><b>Price:</b> 29.95 €</p>
             <label for="quantity" class="d-inline-block py-2 my-0"><b>Quantity:</b></label>
-            <input class="form-control d-inline-block w-25" type="number" name="quantity" id="quantity" min="0" max="99">
+            <input class="form-control d-inline-block" type="number" name="quantity" id="quantity" min="0" max="99">
           </div>
         </div>
       </div>
