Set default quantity to 1

--- a/src/views/public/cart.ejs
+++ b/src/views/public/cart.ejs
@@ -22,7 +22,7 @@
             <p class="my-2"><b>Stock:</b> 100 units</p>
             <p class="my-2"><b>Price:</b> 29.95 €</p>
             <label for="quantity" class="d-inline-block py-2 my-0"><b>Quantity:</b></label>
-            <input class="form-control d-inline-block w-25" type="number" name="quantity" id="quantity" min="0" max="99">
+            <input class="form-control d-inline-block w-25" type="number" name="quantity" id="quantity" min="0" max="99" value="1">
           </div>
         </div>
 
@@ -37,7 +37,7 @@
             <p class="my-2"><b>Stock:</b> 100 units</p>
             <p class="my-2"><b>Price:</b> 29.95 €</p>
             <label for="quantity" class="d-inline-block py-2 my-0"><b>Quantity:</b></label>
-            <input class="form-control d-inline-block" type="number" name="quantity" id="quantity" min="0" max="99">
+            <input class="form-control d-inline-block" type="number" name="quantity" id="quantity" min="0" max="99" value="1">
           </div>
         </div>
       </div>
