--- a/src/views/public/cart.ejs
+++ b/src/views/public/cart.ejs
@@ -44,5 +44,14 @@
 
       <div class="col-1"></div>
     </div>
+
+    <div class="row justify-content-center">
+      <button 
+        type="button" 
+        class="btn btn-primary mt-3" 
+      >
+        Checkout and pay!
+      </button>
+    </div>
   </div>
 </div>
