Replaced <button> by <a> in 'cart.ejs'

--- a/src/views/public/cart.ejs
+++ b/src/views/public/cart.ejs
@@ -46,12 +46,13 @@
     </div>
 
     <div class="row justify-content-center">
-      <button 
+      <a 
         type="button" 
         class="btn btn-primary mt-3" 
+        href="/checkout/1"
       >
         Checkout and pay!
-      </button>
+      </a>
     </div>
   </div>
 </div>
