--- a/src/views/public/checkout-1.ejs
+++ b/src/views/public/checkout-1.ejs
@@ -1,3 +1,51 @@
 <%- include ('partials/navbar.ejs') %>
 
-<h1>Checkout process</h1>
+<div class="checkout-1 p-5">
+  <div class="container-fluid">
+    <h4 class="h4 text-center">
+      Checkout process
+    </h4>
+    <h5 class="h5 text-center">
+      Shipping Details
+    </h5>
+
+    <div class="row">
+      <div class="col-md-3"></div>
+      <div class="col-md-6">
+        <form action="">
+          <div class="form-group mb-2">
+            <label for="receiver">Receiver / Send to:</label>
+            <input class="form-control" type="text" name="receiver" id="receiver">
+          </div>
+
+          <div class="form-group mb-2">
+            <label for="address">Shipping Address:</label>
+            <input class="form-control" type="text" name="address" id="address">
+          </div>
+
+          <div class="form-group mb-2">
+            <label for="zipCode">Zip Code:</label>
+            <input class="form-control" type="text" name="zipCode" id="zipCode">
+          </div>
+
+          <div class="form-group mb-2">
+            <label for="country">Country:</label>
+            <input class="form-control" type="text" name="country" id="country">
+          </div>
+
+          <div class="form-group mb-2">
+            <label for="phoneNumber">Phone number:</label>
+            <input class="form-control" type="text" name="phoneNumber" id="phoneNumber">
+          </div>
+
+          <a href="/cart" class="btn btn-secondary">Back</a>
+          <button type="submit" class="btn btn-primary">
+            Next
+          </button>
+        </form>
+      </div>
+      <div class="col-md-3"></div>
+    </div>
+  </div>
+</div>
+
