Moved product-related views to separate folder, updated routing in controller

--- a/src/views/public/product/product-details.ejs
+++ b/src/views/public/product/product-details.ejs
@@ -1,4 +1,4 @@
-<%- include ('partials/navbar.ejs') %>
+<%- include ('../partials/navbar.ejs') %>
 
 <div class="details p-5">
   <div class="container-fluid">
