Moved user-related views to separate folder and updated router 'user.js'

--- a/src/views/public/user/register.ejs
+++ b/src/views/public/user/register.ejs
@@ -20,7 +20,7 @@
       </label>
       <input type="password" id="registerPassword" class="form-control" placeholder="Password" required>
 
-      <%- include ('partials/errors.ejs') %>
+      <%- include ('../partials/errors.ejs') %>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Create account
