--- a/src/views/public/user/login.ejs
+++ b/src/views/public/user/login.ejs
@@ -16,7 +16,7 @@
       </label>
       <input type="password" id="loginPassword" class="form-control" placeholder="Password" required>
 
-      <%- include ('partials/errors.ejs') %>
+      <%- include ('../partials/errors.ejs') %>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Sign in
