--- a/src/views/public/user/reset.ejs
+++ b/src/views/public/user/reset.ejs
@@ -15,7 +15,7 @@
       </label>
       <input type="email" id="resetEmail" class="form-control" placeholder="Email address" required autofocus>
 
-      <%- include ('partials/errors.ejs') %>
+      <%- include ('../partials/errors.ejs') %>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Reset password
