--- a/src/views/public/product/checkout-3.ejs
+++ b/src/views/public/product/checkout-3.ejs
@@ -6,28 +6,143 @@
       Checkout process
     </h4>
     <h5 class="h5 text-center">
-      Review your order details
+      Review your order
     </h5>
 
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
-        <form action="">
-
-          <div class="form-check mb-2">
-            <input class="form-check-input" type="checkbox" value="" id="terms">
-            <label class="form-check-label" for="terms">
-              I accept the <u>Terms and Conditions</u>
-            </label>
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="row justify-content-between">
+          <div class="col-md-6">
+            <h5 class="h5 mt-3">
+              Shipping details
+            </h5>
+            <p class="my-2 ml-2">
+              <b>Send to:</b>
+              Jorge García Torralba
+            </p>
+            <p class="my-2 ml-2">
+              <b>Address:</b>
+              Avda. Inventada, 123
+            </p>
+            <p class="my-2 ml-2">
+              <b>Zip code:</b>
+              08011
+            </p>
+            <p class="my-2 ml-2">
+              <b>City:</b>
+              Barcelona
+            </p>
+            <p class="my-2 ml-2">
+              <b>Country:</b>
+              Spain
+            </p>
+            <p class="my-2 ml-2">
+              <b>Phone number:</b>
+              666778899
+            </p>
           </div>
 
-          <a href="/checkout/2" class="btn btn-secondary">Back</a>
-          <button type="submit" class="btn btn-primary">
-            Confirm
-          </button>
-        </form>
+          <div class="col-md-6">
+            <h5 class="h5 mt-3">
+              Payment information
+            </h5>
+            <p class="my-2 ml-2">
+              <b>Credit Card Number:</b>
+              1111-2222-3333-4444
+            </p>
+            <p class="my-2 ml-2">
+              <b>CVV Number:</b>
+              567
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h5 class="h5 mt-3">
+              Products
+            </h5>
+            <div class="row product mx-auto mt-3 pb-3 border-bottom">
+              <div class="col-md-4">
+                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
+              </div>
+              <div class="col-md-8">
+                <p class="my-2 ml-2">
+                  <b>Product:</b>
+                  4ever Gold
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Price:</b>
+                  29.95 €
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Quantity:</b>
+                  6 units
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Total:</b>
+                  180 €
+                </p>
+              </div>
+            </div>
+
+            <div class="row product mx-auto mt-3 pb-3 border-bottom">
+              <div class="col-md-4">
+                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
+              </div>
+              <div class="col-md-8">
+                <p class="my-2 ml-2">
+                  <b>Product:</b>
+                  4ever Gold
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Price:</b>
+                  29.95 €
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Quantity:</b>
+                  6 units
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Total:</b>
+                  180 €
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h5 class="h5 mt-3">
+              <b>Total order:</b>
+              599 €
+            </h5>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <form action="" class="mt-3">
+
+              <div class="form-check mb-2">
+                <input class="form-check-input" type="checkbox" value="" id="terms">
+                <label class="form-check-label" for="terms">
+                  I accept the <u>Terms and Conditions</u>
+                </label>
+              </div>
+
+              <a href="/checkout/2" class="btn btn-secondary mt-2">Back</a>
+              <button type="submit" class="btn btn-primary mt-2">
+                Confirm
+              </button>
+            </form>
+          </div>
+        </div>
+
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-md-1"></div>
     </div>
   </div>
 </div>
