Added border-bottom after page sub-title

--- a/src/views/public/product/checkout-2.ejs
+++ b/src/views/public/product/checkout-2.ejs
@@ -5,7 +5,7 @@
     <h4 class="h4 text-center">
       Checkout process
     </h4>
-    <h5 class="h5 text-center">
+    <h5 class="h5 text-center pb-3 mb-3 border-bottom">
       Payment information
     </h5>
 
