Design for view 'checkout-4.ejs' completed

--- a/src/views/public/product/checkout-4.ejs
+++ b/src/views/public/product/checkout-4.ejs
@@ -1,23 +1,138 @@
 <%- include ('../partials/navbar.ejs') %>
 
-<div class="checkout-3 p-5">
+<div class="checkout-4 p-5">
   <div class="container-fluid">
     <h4 class="h4 text-center">
       Checkout process
     </h4>
-    <h5 class="h5 text-center">
-      Order confirmation
+    <h5 class="h5 text-center pb-3 mb-3 border-bottom">
+      Purchase process completed! 🎉
     </h5>
 
     <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-6">
-        <p class="my-1">
-          Back to
-          <a href="/" class="text-decoration-none text-body"><b>homepage</b></a>.
-        </p>
+      <div class="col-md-1"></div>
+      <div class="col-md-10">
+        <div class="row justify-content-between">
+          <div class="col-md-6">
+            <h5 class="h5 mt-3">
+              Shipping details
+            </h5>
+            <p class="my-2 ml-2">
+              <b>Send to:</b>
+              Jorge García Torralba
+            </p>
+            <p class="my-2 ml-2">
+              <b>Address:</b>
+              Avda. Inventada, 123
+            </p>
+            <p class="my-2 ml-2">
+              <b>Zip code:</b>
+              08011
+            </p>
+            <p class="my-2 ml-2">
+              <b>City:</b>
+              Barcelona
+            </p>
+            <p class="my-2 ml-2">
+              <b>Country:</b>
+              Spain
+            </p>
+            <p class="my-2 ml-2">
+              <b>Phone number:</b>
+              666778899
+            </p>
+          </div>
+
+          <div class="col-md-6">
+            <h5 class="h5 mt-3">
+              Payment information
+            </h5>
+            <p class="my-2 ml-2">
+              <b>Credit Card Number:</b>
+              1111-2222-3333-4444
+            </p>
+            <p class="my-2 ml-2">
+              <b>CVV Number:</b>
+              567
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h5 class="h5 mt-3">
+              Products
+            </h5>
+            <div class="row product mx-auto mt-3 pb-3 border-bottom">
+              <div class="col-md-4">
+                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
+              </div>
+              <div class="col-md-8">
+                <p class="my-2 ml-2">
+                  <b>Product:</b>
+                  4ever Gold
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Price:</b>
+                  29.95 €
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Quantity:</b>
+                  6 units
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Total:</b>
+                  180 €
+                </p>
+              </div>
+            </div>
+
+            <div class="row product mx-auto mt-3 pb-3 border-bottom">
+              <div class="col-md-4">
+                <img class="d-block w-100 border" src="https://i.ibb.co/ChtcCkQ/prod-1-1.jpg" alt="Product image">
+              </div>
+              <div class="col-md-8">
+                <p class="my-2 ml-2">
+                  <b>Product:</b>
+                  4ever Gold
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Price:</b>
+                  29.95 €
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Quantity:</b>
+                  6 units
+                </p>
+                <p class="my-2 ml-2">
+                  <b>Total:</b>
+                  180 €
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <h5 class="h5 mt-3 border-bottom pb-3">
+              <b>Total order:</b>
+              599 €
+            </h5>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-12">
+            <p class="my-1">
+              Back to
+              <a href="/" class="text-decoration-none text-body"><b>homepage</b></a>.
+            </p>
+          </div>
+        </div>
+
       </div>
-      <div class="col-md-3"></div>
+      <div class="col-md-1"></div>
     </div>
   </div>
 </div>
