--- a/src/views/public/user/register.ejs
+++ b/src/views/public/user/register.ejs
@@ -20,11 +20,7 @@
       </label>
       <input type="password" id="registerPassword" name="registerPassword" class="form-control" placeholder="Password" required>
 
-      <%- include ('../partials/errors.ejs') %>
-
-      <% if(typeof(message) != "undefined") { %>
-        <p><%- message %></p>
-      <% } %>
+      <%- include ('../partials/messages.ejs') %>
 
       <button class="btn btn-lg btn-primary btn-block" type="submit">
         Create account
