Re-worked error msg in partial 'messages.ejs'

--- a/src/views/public/partials/messages.ejs
+++ b/src/views/public/partials/messages.ejs
@@ -2,7 +2,7 @@
   <div class="cont-error">
     <% if(message.code !== undefined) { %>
       <div class="alert alert-danger alert-dismissible fade show">
-        <strong>Error!</strong> <%- message %>
+        <strong>Error!</strong> <%- message.sqlMessage %>
     <% } else { %>
       <div class="alert alert-success alert-dismissible fade show">
         <strong>Success!</strong> <%- message %>
