Added minlength to password input in 'register.ejs'

--- a/src/views/public/user/register.ejs
+++ b/src/views/public/user/register.ejs
@@ -18,7 +18,7 @@
       <label for="registerPassword" class="sr-only">
         Password
       </label>
-      <input type="password" id="registerPassword" name="registerPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="registerPassword" name="registerPassword" class="form-control" placeholder="Password" minlength="6" required>
 
       <%- include ('../partials/messages.ejs') %>
 
