Re-worked link to logout button

--- a/src/views/public/partials/navbar.ejs
+++ b/src/views/public/partials/navbar.ejs
@@ -36,7 +36,7 @@
           </a>
         </li>
         <li class="nav-item text-right d-lg-inline-block">
-          <a class="nav-link" href="/logout">
+          <a class="nav-link" href="/user/logout">
             Logout
           </a>
         </li>
