Included partial 'messages.ejs'

--- a/src/views/public/homepage.ejs
+++ b/src/views/public/homepage.ejs
@@ -2,6 +2,9 @@
 
 <div class="album pt-4 pb-1">
   <div class="container">
+
+    <%- include ('partials/messages.ejs') %>
+
     <div class="row">
 
       <% products.forEach(product => { %>
